# compression-prompt

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_COMPLETE.md  README.md  large_test_input.txt
.github/workflows/: rust.yml  typescript.yml
benchmarks/ab_tests/: ab_test_suite.json
benchmarks/ab_tests/individual_tests/: benchmark_100_paper_10_statistical_50.json  benchmark_100_paper_10_statistical_70.json  benchmark_100_paper_1_statistical_50.json  benchmark_100_paper_1_statistical_70.json  benchmark_100_paper_2_statistical_50.json  benchmark_100_paper_2_statistical_70.json  benchmark_100_paper_3_statistical_50.json  benchmark_100_paper_3_statistical_70.json  benchmark_100_paper_4_statistical_50.json  benchmark_100_paper_4_statistical_70.json  benchmark_100_paper_5_dictionary.json  benchmark_100_paper_5_hybrid.json  benchmark_100_paper_5_statistical_50.json  benchmark_100_paper_5_statistical_70.json  benchmark_100_paper_6_statistical_50.json  benchmark_100_paper_6_statistical_70.json  benchmark_100_paper_7_statistical_50.json  benchmark_100_paper_7_statistical_70.json  benchmark_100_paper_8_statistical_50.json  benchmark_100_paper_8_statistical_70.json  benchmark_100_paper_9_statistical_50.json  benchmark_100_paper_9_statistical_70.json  benchmark_200_paper_10_statistical_50.json  benchmark_200_paper_10_statistical_70.json  benchmark_200_paper_1_statistical_50.json  benchmark_200_paper_1_statistical_70.json  benchmark_200_paper_2_statistical_50.json  benchmark_200_paper_2_statistical_70.json  benchmark_200_paper_3_statistical_50.json  benchmark_200_paper_3_statistical_70.json  benchmark_200_paper_4_statistical_50.json  benchmark_200_paper_4_statistical_70.json  benchmark_200_paper_5_dictionary.json  benchmark_200_paper_5_hybrid.json  benchmark_200_paper_5_statistical_50.json  benchmark_200_paper_5_statistical_70.json  benchmark_200_paper_6_statistical_50.json  benchmark_200_paper_6_statistical_70.json  benchmark_200_paper_7_statistical_50.json  benchmark_200_paper_7_statistical_70.json  (+4 more)
benchmarks/llm_tests/100papers_hybrid/: test_002_metadata.txt  test_003_metadata.txt  test_004_metadata.txt  test_005_metadata.txt  test_006_metadata.txt  test_010_compressed.txt  test_011_compressed.txt  test_013_compressed.txt  test_013_metadata.txt  test_013_original.txt  test_014_metadata.txt  test_015_metadata.txt  (+39 more)
data/: ai_papers.csv
docs/: ARCHITECTURE.md  EXAMPLES.md  IMPROVEMENTS.md  QUALITY_EVALUATION.md  ROADMAP.md  STATUS.md
docs/reports/: CLAUDE-HAIKU-TEST-AB.md  CLAUDE-SONNET-TEST-AB.md  GEMINI-TEST-AB.md  GPT5-TEST-AB.md  GROK-4-TEST-AB.md  GROK-TEST-AB.md
docs/specs/: BENCHMARK_DATASET_ARXIV.md  BENCHMARK_METHODOLOGY.md  BENCHMARK_REORGANIZATION.md  COMPRESSION_ALGORITHM.md  IMAGE_COMPRESSION.md  TOKENIZER_INTERFACE.md
paper/: README.md  main.tex  references.bib
paper/sections/: abstract.tex  algorithm.tex  benchmarks.tex  conclusion.tex  implementation.tex  introduction.tex  theoretical_foundation.tex
python/: .gitignore  .pypirc.template  Makefile  README.pypi.md  benchmark_results.json  pyproject.toml  requirements.txt  setup.py
python/.github/workflows/: python.yml
python/compression_prompt/: __init__.py  compressor.py  statistical_filter.py
python/examples/: basic_usage.py  benchmark.py  custom_config.py  image_output.py  rag_compression.py
python/scripts/: benchmark_full.py  build.sh  publish.sh  run_tests.sh  test_install.sh
python/tests/: __init__.py  test_compressor.py  test_image_renderer.py  test_integration.py  test_quality_metrics.py  test_statistical_filter.py
rust/: Cargo.toml  rnn_paper_compressed.txt  rust-toolchain.toml
rust/benches/: README.md  ab_test_generator.rs  compression_bench.rs
rust/examples/: compare_image_formats.rs  compress_to_image.rs  evaluate_compression_quality.rs  extract_texts_for_llm.rs  generate_ab_tests.rs  paper_to_images.rs  paper_to_jpeg.rs  paper_to_png_50pct.rs  paper_to_readable_images.rs  test_basic_compression.rs  test_multilingual.rs
rust/src/: compressor.rs  dictionary.rs  image_renderer.rs  lib.rs  marker.rs  ngram.rs  quality_metrics.rs  statistical_filter.rs  tokenizer.rs
rust/tests/: integration_test.rs
scripts/: benchmark_arxiv.sh  concatenate_papers.py  convert_pdfs_to_markdown.sh  download_arxiv_papers.py  monitor_download.sh  run_benchmarks.ps1  run_benchmarks.sh  rust_to_ts.py
typescript/: .eslintrc.json  .gitignore  .prettierrc.json  README.md  jest.config.js  package.json  test-image-compression.ts  tsconfig.json
typescript/examples/: paper-to-images.ts
typescript/src/: QualityMetrics.ts  StatisticalFilter.ts  cli.ts  compressor.ts  image-renderer.ts  index.ts  quality-metrics.ts  statistical-filter.ts  types.ts
(+554 files in other folders)
