[package]
name = "compression-prompt"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["HiveLLM Team"]
license = "MIT"
repository = "https://github.com/hivellm/compression-prompt"
description = "Semantic lossless compression for LLM prompts via dictionary coding"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
regex = "1.10"

# Performance
ahash = "0.8"
rayon = "1.10"

# Unicode handling
unicode-segmentation = "1.12"
tiktoken-rs = "0.7.0"

# Datetime handling
chrono = "0.4"

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compression_bench"
harness = false
path = "benches/compression_bench.rs"

[[bench]]
name = "ab_test_generator"
harness = false
path = "benches/ab_test_generator.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

